# mcp-server-youtube

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mcp_server_youtube/: __init__.py  __main__.py  server.py
