[project]
name = "mcp-server-youtube"
version = "0.2.2"
description = "A Model Context Protocol server to retrieve Youtube transcripts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Adam" }]
maintainers = [{ name = "Adam", email = "adampatterson@protonmail.com" }]
license = { text = "MIT" }
dependencies = [
    "httpx<0.28",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
    "requests>=2.32.3",
    "yt-dlp>=2025.07.21",
]

[project.scripts]
mcp-server-youtube = "mcp_server_youtube:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
